tests/rosetta/out/Pascal/benfords-law.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/benfords-law.pas
benfords-law.pas(23,9) Error: Identifier not found "_sliceString"
benfords-law.pas(48,12) Error: Identifier not found "_sliceString"
benfords-law.pas(89,23) Error: Identifier not found "_appendList"
benfords-law.pas(89,47) Fatal: Syntax error, ")" expected but "," found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
